[package]
name = "rust-certbot"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of Certbot for automated SSL certificate management"
repository = "https://github.com/vv198x/rust-certbot"
keywords = ["ssl", "certificate", "lets-encrypt", "acme", "certbot", "proxy", "web-server"]
categories = ["web-programming", "command-line-utilities", "asynchronous", "network-programming"]

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"

# Async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP client for ACME challenges
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command line interface
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# SSL/TLS certificates
rustls = "0.21"
rustls-pemfile = "1.0"
x509 = "0.2"

# ACME protocol
acme-lib = "0.8"

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.9"

# Proxy and networking
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# File system operations
tokio-fs = "0.1"
walkdir = "2.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Environment variables
dotenv = "0.15"

# Health checks
health = "0.2"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5"

# Code quality
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["full"]
full = ["actix-web/rustls", "reqwest/rustls-tls"]
dev = ["tracing-subscriber/fmt"]